<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/back_vector"
                    android:src="@drawable/img_back"
                    app:tint="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/img_user"
                    app:tint="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/route_to_activity"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/f_maps"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:liteMode="true" />

                <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/f_maps"
                    android:layout_alignTop="@+id/f_maps"
                    android:layout_alignEnd="@+id/f_maps"
                    android:layout_alignBottom="@+id/f_maps"
                    android:contentDescription="@string/fragment_container"
                    android:src="@android:color/transparent" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_validate"
                android:text="@string/return_to_home_page"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>