<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/tools"
    tools:context=".fragments.AddActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/img_back"
                    android:contentDescription="@string/back_vector"
                    app:tint="@color/black"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/profil_picture"
                    android:src="@drawable/img_user"
                    app:tint="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/choose_the_location" />

            <EditText
                android:id="@+id/et_search_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border_search_bar"
                android:drawableStart="@drawable/img_search"
                android:gravity="center"
                android:hint="@string/type_a_location"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/dark_grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/f_maps"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    map:liteMode="true" />

                <ImageView
                    android:id="@+id/imagetrans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/f_maps"
                    android:layout_alignTop="@+id/f_maps"
                    android:layout_alignEnd="@+id/f_maps"
                    android:layout_alignBottom="@+id/f_maps"
                    android:contentDescription="@string/fragment_container"
                    android:src="@android:color/transparent" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_validate"
                android:text="@string/validate"
                android:textColor="@color/white"
                android:layout_marginHorizontal="15dp"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />


    </LinearLayout>
</FrameLayout>